[tool.poetry]
name = "agentic_security"
version = "0.7.4"
description = "Agentic LLM vulnerability scanner"
authors = ["Alexander Miasoiedov <msoedov@gmail.com>"]
maintainers = ["Alexander Miasoiedov <msoedov@gmail.com>"]
repository = "https://github.com/msoedov/agentic_security"
homepage = "https://github.com/msoedov/agentic_security"
documentation = "https://github.com/msoedov/agentic_security/blob/main/README.md"
license = "Apache-2.0"
readme = "Readme.md"
keywords = [
    "LLM vulnerability scanner",
    "llm security",
    "llm adversarial attacks",
    "prompt injection",
    "prompt leakage",
    "prompt injection attacks",
    "prompt leakage prevention",
    "llm vulnerabilities",
    "owasp-llm-top-10",
]
packages = [{ include = "agentic_security", from = "." }]


[tool.poetry.scripts]
agentic_security = "agentic_security.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.122.0"
uvicorn = "^0.38.0"
fire = "0.7.1"
loguru = "^0.7.3"
httpx = "^0.28.1"
cache-to-disk = "^2.0.0"
pandas = ">=1.4,<3.0"
datasets = "^4.4.1"
tabulate = ">=0.8.9,<0.10.0"
colorama = "^0.4.4"
matplotlib = "^3.10.7"
pydantic = "^2.12.5"
scikit-optimize = "^0.10.2"
scikit-learn = "^1.7.2"
numpy = ">=1.24.3,<3.0.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.20"
tomli = "^2.3.0"
rich = "^14.2.0"
gTTS = "^2.5.4"
sentry_sdk = "^2.46.0"
orjson = "^3.11.4"
pyfiglet = "^1.0.4"
termcolor = "^3.2.0"
mcp = "^1.22.0"
# garak = { version = "*", optional = true }
pytest-xdist = "^3.8.0"

[tool.poetry.group.dev.dependencies]
# Pytest
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
inline-snapshot = "^0.31.1"
pytest-mock = "^3.15.1"
# Rest
black = ">=24.10,<26.0"
mypy = "^1.19.0"
pre-commit = "^4.5.0"
huggingface-hub = "^1.1.6"
# Docs
mkdocs = ">=1.4.2"
mkdocs-material = "^9.7.0"
mkdocstrings = "^1.0.0"
mkdocs-jupyter = ">=0.25.1"


[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--durations=5 -m 'not slow' -n 3"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = "slow: marks tests as slow"

[project]
# MCP requires the following fields to be present in the pyproject.toml file
name = "agentic_security"
version = "1.0.0"
requires-python = ">=3.11"
